--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -29,10 +29,16 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
+      <table id="calendarTable"></table>
       <!-- Timeblocks go here -->
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
+
+<!--Css done 
+Designing html and give it classes that are designed in style css already (connect the yarn)
+Javascript and jquery from scratch  -->
