--- a/index.html
+++ b/index.html
@@ -29,8 +29,93 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <table id="calendarTable"></table>
+      <!-- <table id="calendarTable"></table> -->
       <!-- Timeblocks go here -->
+      <div id="9" class="time-block row">
+        <div class="hour">9am</div>
+        <textarea class="description"></textarea>
+        <div class="saveBtn"><i class="fas fa-save"></i></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <!-- <table id="calendarTable"></table> -->
+      <!-- Timeblocks go here -->
+      <div id="10" class="time-block row">
+        <div class="hour">10am</div>
+        <textarea class="description"></textarea>
+        <div class="saveBtn"><i class="fas fa-save"></i></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <!-- <table id="calendarTable"></table> -->
+      <!-- Timeblocks go here -->
+      <div id="11" class="time-block row">
+        <div class="hour">11am</div>
+        <textarea class="description"></textarea>
+        <div class="saveBtn"><i class="fas fa-save"></i></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <!-- <table id="calendarTable"></table> -->
+      <!-- Timeblocks go here -->
+      <div id="12" class="time-block row">
+        <div class="hour">12pm</div>
+        <textarea class="description"></textarea>
+        <div class="saveBtn"><i class="fas fa-save"></i></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <!-- <table id="calendarTable"></table> -->
+      <!-- Timeblocks go here -->
+      <div id="1" class="time-block row">
+        <div class="hour">1pm</div>
+        <textarea class="description"></textarea>
+        <div class="saveBtn"><i class="fas fa-save"></i></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <!-- <table id="calendarTable"></table> -->
+      <!-- Timeblocks go here -->
+      <div id="2" class="time-block row">
+        <div class="hour">2pm</div>
+        <textarea class="description"></textarea>
+        <div class="saveBtn"><i class="fas fa-save"></i></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <!-- <table id="calendarTable"></table> -->
+      <!-- Timeblocks go here -->
+      <div id="3" class="time-block row">
+        <div class="hour">3pm</div>
+        <textarea class="description"></textarea>
+        <div class="saveBtn"><i class="fas fa-save"></i></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <!-- <table id="calendarTable"></table> -->
+      <!-- Timeblocks go here -->
+      <div id="4" class="time-block row">
+        <div class="hour">4pm</div>
+        <textarea class="description"></textarea>
+        <div class="saveBtn"><i class="fas fa-save"></i></div>
+      </div>
+    </div>
+
+    <div class="container">
+      <!-- <table id="calendarTable"></table> -->
+      <!-- Timeblocks go here -->
+      <div id="5" class="time-block row">
+        <div class="hour">5pm</div>
+        <textarea class="description"></textarea>
+        <div class="saveBtn"><i class="fas fa-save"></i></div>
+      </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
