--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       <!-- <table id="calendarTable"></table> -->
       <!-- Timeblocks go here -->
       <div id="9" class="time-block row">
-        <div class="hour">9am</div>
-        <textarea class="description"></textarea>
-        <div class="saveBtn"><i class="fas fa-save"></i></div>
+        <div class="hour col-1">9am</div>
+        <textarea class="description col-10"></textarea>
+        <div class="saveBtn col-1 btn"><i class="fas fa-save"></i></div>
       </div>
     </div>
 
@@ -42,9 +42,9 @@
       <!-- <table id="calendarTable"></table> -->
       <!-- Timeblocks go here -->
       <div id="10" class="time-block row">
-        <div class="hour">10am</div>
-        <textarea class="description"></textarea>
-        <div class="saveBtn"><i class="fas fa-save"></i></div>
+        <div class="hour col-1">10am</div>
+        <textarea class="description col-10"></textarea>
+        <div class="saveBtn col-1 btn"><i class="fas fa-save"></i></div>
       </div>
     </div>
 
@@ -52,9 +52,9 @@
       <!-- <table id="calendarTable"></table> -->
       <!-- Timeblocks go here -->
       <div id="11" class="time-block row">
-        <div class="hour">11am</div>
-        <textarea class="description"></textarea>
-        <div class="saveBtn"><i class="fas fa-save"></i></div>
+        <div class="hour col-1">11am</div>
+        <textarea class="description col-10"></textarea>
+        <div class="saveBtn col-1 btn"><i class="fas fa-save"></i></div>
       </div>
     </div>
 
@@ -62,9 +62,9 @@
       <!-- <table id="calendarTable"></table> -->
       <!-- Timeblocks go here -->
       <div id="12" class="time-block row">
-        <div class="hour">12pm</div>
-        <textarea class="description"></textarea>
-        <div class="saveBtn"><i class="fas fa-save"></i></div>
+        <div class="hour col-1">12pm</div>
+        <textarea class="description col-10"></textarea>
+        <div class="saveBtn col-1 btn"><i class="fas fa-save"></i></div>
       </div>
     </div>
 
@@ -72,9 +72,9 @@
       <!-- <table id="calendarTable"></table> -->
       <!-- Timeblocks go here -->
       <div id="13" class="time-block row">
-        <div class="hour">1pm</div>
-        <textarea class="description"></textarea>
-        <div class="saveBtn"><i class="fas fa-save"></i></div>
+        <div class="hour col-1">1pm</div>
+        <textarea class="description col-10"></textarea>
+        <div class="saveBtn col-1 btn"><i class="fas fa-save"></i></div>
       </div>
     </div>
 
@@ -82,9 +82,9 @@
       <!-- <table id="calendarTable"></table> -->
       <!-- Timeblocks go here -->
       <div id="14" class="time-block row">
-        <div class="hour">2pm</div>
-        <textarea class="description"></textarea>
-        <div class="saveBtn"><i class="fas fa-save"></i></div>
+        <div class="hour col-1">2pm</div>
+        <textarea class="description col-10"></textarea>
+        <div class="saveBtn col-1 btn"><i class="fas fa-save"></i></div>
       </div>
     </div>
 
@@ -92,9 +92,9 @@
       <!-- <table id="calendarTable"></table> -->
       <!-- Timeblocks go here -->
       <div id="15" class="time-block row">
-        <div class="hour">3pm</div>
-        <textarea class="description"></textarea>
-        <div class="saveBtn"><i class="fas fa-save"></i></div>
+        <div class="hour col-1">3pm</div>
+        <textarea class="description col-10"></textarea>
+        <div class="saveBtn col-1 btn"><i class="fas fa-save"></i></div>
       </div>
     </div>
 
@@ -102,9 +102,9 @@
       <!-- <table id="calendarTable"></table> -->
       <!-- Timeblocks go here -->
       <div id="16" class="time-block row">
-        <div class="hour">4pm</div>
-        <textarea class="description"></textarea>
-        <div class="saveBtn"><i class="fas fa-save"></i></div>
+        <div class="hour col-1">4pm</div>
+        <textarea class="description col-10"></textarea>
+        <div class="saveBtn col-1 btn"><i class="fas fa-save"></i></div>
       </div>
     </div>
 
@@ -112,9 +112,9 @@
       <!-- <table id="calendarTable"></table> -->
       <!-- Timeblocks go here -->
       <div id="17" class="time-block row">
-        <div class="hour">5pm</div>
-        <textarea class="description"></textarea>
-        <div class="saveBtn"><i class="fas fa-save"></i></div>
+        <div class="hour col-1">5pm</div>
+        <textarea class="description col-10"></textarea>
+        <div class="saveBtn col-1 btn"><i class="fas fa-save"></i></div>
       </div>
     </div>
 
