--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- <table id="calendarTable"></table> -->
       <!-- Timeblocks go here -->
       <div id="9" class="time-block row">
         <div class="hour col-1">9am</div>
@@ -39,8 +38,6 @@
     </div>
 
     <div class="container">
-      <!-- <table id="calendarTable"></table> -->
-      <!-- Timeblocks go here -->
       <div id="10" class="time-block row">
         <div class="hour col-1">10am</div>
         <textarea class="description col-10"></textarea>
@@ -49,8 +46,6 @@
     </div>
 
     <div class="container">
-      <!-- <table id="calendarTable"></table> -->
-      <!-- Timeblocks go here -->
       <div id="11" class="time-block row">
         <div class="hour col-1">11am</div>
         <textarea class="description col-10"></textarea>
@@ -59,8 +54,6 @@
     </div>
 
     <div class="container">
-      <!-- <table id="calendarTable"></table> -->
-      <!-- Timeblocks go here -->
       <div id="12" class="time-block row">
         <div class="hour col-1">12pm</div>
         <textarea class="description col-10"></textarea>
@@ -69,8 +62,6 @@
     </div>
 
     <div class="container">
-      <!-- <table id="calendarTable"></table> -->
-      <!-- Timeblocks go here -->
       <div id="13" class="time-block row">
         <div class="hour col-1">1pm</div>
         <textarea class="description col-10"></textarea>
@@ -79,8 +70,6 @@
     </div>
 
     <div class="container">
-      <!-- <table id="calendarTable"></table> -->
-      <!-- Timeblocks go here -->
       <div id="14" class="time-block row">
         <div class="hour col-1">2pm</div>
         <textarea class="description col-10"></textarea>
@@ -89,8 +78,6 @@
     </div>
 
     <div class="container">
-      <!-- <table id="calendarTable"></table> -->
-      <!-- Timeblocks go here -->
       <div id="15" class="time-block row">
         <div class="hour col-1">3pm</div>
         <textarea class="description col-10"></textarea>
@@ -99,8 +86,6 @@
     </div>
 
     <div class="container">
-      <!-- <table id="calendarTable"></table> -->
-      <!-- Timeblocks go here -->
       <div id="16" class="time-block row">
         <div class="hour col-1">4pm</div>
         <textarea class="description col-10"></textarea>
@@ -109,8 +94,6 @@
     </div>
 
     <div class="container">
-      <!-- <table id="calendarTable"></table> -->
-      <!-- Timeblocks go here -->
       <div id="17" class="time-block row">
         <div class="hour col-1">5pm</div>
         <textarea class="description col-10"></textarea>
@@ -124,6 +107,6 @@
   </body>
 </html>
 
-<!--Css done 
+<!--note -- Css done 
 Designing html and give it classes that are designed in style css already (connect the yarn)
 Javascript and jquery from scratch  -->
